<resources>
    <string name="app_name">Avaliacao DevMobile</string>
    <string name="cadastro_produto">Cadastro de Produto</string>
    <string name="relatorio_produtos">Relatório de Produtos</string>
    <string name="salvar_produto">Salvar Produto</string>
    <string name="hint_produto">Nome do Produto</string>
    <string name="hint_codigo">Código do Produto</string>
    <string name="hint_preco">Preço</string>
    <string name="hint_quantidade">Quantidade</string>
    <string name="btn_relatorio">Produtos Cadastrados</string>
    <string name="btn_voltar">Voltar</string>
    <string name="nenhum_produto">Nenhum produto cadastrado.</string>
</resources>